# crypto_primitives

./: Cargo.toml  LICENSE.txt  README.md
crypto_utils/: Cargo.toml
crypto_utils/src/: crypto_core.rs  errors.rs  lib.rs  types.rs
src/: crypto_core.rs  crypto_utils.rs  errors.rs  lib.rs  main.rs  types.rs
tests/: integration_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
