[package]
name = "crypto_primitives"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
sequoia-openpgp = { version = "*", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.1"
serde_json = "1.0"
base64= "0.13.0"
console_error_panic_hook = "0.1.6"
anyhow = "1.0"
lazy_static = "1.4.0"
js-sys = "0.3"
argon2 = "0.5.0"
rand = "0.8.5"
aes-gcm = "0.10.1"
thiserror = "1.0"


[dependencies.web-sys]
version = "0.3"
features = [
  "console"
]
