[package]
name = "crypto_utils"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]
name = "crypto_utils"
path = "src/lib.rs"

[dependencies]
sequoia-openpgp = { version = "1.0", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
anyhow = "1.0"
argon2 = "0.5.0"
rand = "0.8.5"
aes-gcm = "0.10.1"
thiserror = "1.0"
